[package]
name = "jito-searcher-client"
version = "0.1.0"
edition = "2021"
description = "Wrapper around the generated gRPC. Adds auth and retry semantics."

[dependencies]
futures-util = "0.3.28"
jito-protos = { path = "../jito_protos" }
log = "0.4"
prost-types = "0.12"
solana-client = "~1.16"
solana-metrics = "~1.16"
solana-sdk = "~1.16"
solana-transaction-status = "~1.16"
thiserror = "1.0.40"
tokio = "1"
tonic = { version = "0.10", features = [ "tls", "tls-roots", "tls-webpki-roots"] }
